--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div class="container centered">
     <h1 class="mb-4">این آدرس را برای کسی ارسال نکنید</h1>
     <p class="mb-4">لطفاً لینک <strong>f2n.ir</strong> را در پیامک یا شبکه‌های اجتماعی به اشتراک نگذارید.</p>
-    <a href="/main.html" class="btn btn-enter">ورود</a>
+    <a href="main.html" class="btn btn-enter">ورود</a>
   </div>
 </body>
 </html>
