--- a/Residences.html
+++ b/Residences.html
@@ -47,10 +47,10 @@
       <h1 class="text-xl sm:text-2xl font-bold">اقامتگاه‌های رایگان یا ارزان</h1>
       <p class="mt-2">تعداد اقامتگاه‌ها: <span id="residenceCount">0</span></p>
       <p class="mt-2">کانال اصلی و منبع: <a href="https://t.me/accommodationforwarvictims" target="_blank">@accommodationforwarvictims</a></p>
-      <p>مدیریت: <a href="https://t.me/parm7ida" target="_blank">@parm7ida</a></p>
+      <p>برای معرفی اقامتگاه جدید با خانوم پارمیدا هماهنگ کنید<a href="https://t.me/parm7ida" target="_blank">@parm7ida</a></p>
       <p class="mt-2 text-red-600 font-semibold text-sm sm:text-base">
-        برای کمک به تکمیل لیست اقامتگاه‌ها، لطفاً به
-        <a href="https://t.me/m4tinbeigipv" target="_blank">@m4tinbeigipv</a> پیام دهید.
+        برای انتقال محتوا از کانال به سایت به ریک سانچز
+        <a href="https://t.me/m4tinbeigipv" target="_blank">@m4tinbeigipv</a> پیام بدید.
       </p>
     </div>
 
