--- a/SOS.html
+++ b/SOS.html
@@ -122,6 +122,9 @@
         <div class="source">
             <p>منبع: <a href="https://www.zoomit.ir/howto/442075-iran-emergency-numbers/" target="_blank">زومیت</a></p>
         </div>
+		<div class="source">
+            <p>ایده: <a href="https://x.com/old_boye/" target="_blank">شادان غمگسار</a></p>
+        </div>
     </div>
 
     <!-- Bootstrap JS and Popper.js -->
