--- a/Residences.html
+++ b/Residences.html
@@ -35,7 +35,6 @@
     a:hover {
       text-decoration: underline;
     }
-    /* اسکرول افقی برای جدول در موبایل */
     .table-wrapper {
       overflow-x: auto;
     }
@@ -74,6 +73,11 @@
         <tbody id="tableBody"></tbody>
       </table>
     </div>
+  </div>
+
+  <!-- اضافه کردن متن در انتهای صفحه -->
+  <div class="text-center mt-6 text-sm text-gray-600">
+    ایده: آژانس زن - پروژه هم امید - خانوم حکیمی
   </div>
 
   <script>
