--- a/Residences.html
+++ b/Residences.html
@@ -77,7 +77,7 @@
 
   <!-- اضافه کردن متن در انتهای صفحه -->
   <div class="text-center mt-6 text-sm text-gray-600">
-    ایده: آژانس زن - پروژه هم امید - خانوم حکیمی
+  <a href="https://zenbranding.agency/hamomid">ایده: پروژه هم امید_آژانس برندسازی ذن</a>
   </div>
 
   <script>
