--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     </section>
 
     <section class="text-center">
-      <a href="/login" class="inline-block bg-blue-600 text-white px-8 py-4 rounded-lg btn hover:bg-blue-700" id="login-button"></a>
+      <a href="/main.html" class="inline-block bg-blue-600 text-white px-8 py-4 rounded-lg btn hover:bg-blue-700" id="login-button"></a>
     </section>
   </div>
 
