--- a/main.html
+++ b/main.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>برای ایران - لیست پروژه‌ها</title>
-  <script src="https://cdn.jsdelivr.net/npm/react@18.2.0/umd/react.production.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/babel-standalone@6.26.0/babel.min.js"></script>
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/gh/rastikerdar/vazir-font@v30.1.0/dist/font-face.css" rel="stylesheet">
+  <script src="src/react.production.min.js"></script>
+  <script src="src/react-dom.production.min.js"></script>
+  <script src="src/babel.min.js"></script>
+  <link href="src/tailwind.min.css" rel="stylesheet">
+  <link href="src/font-face.css" rel="stylesheet">
   <style>
     body {
       background-color: #000;
@@ -78,8 +78,8 @@
 
       React.useEffect(() => {
         Promise.all([
-          fetch('projects.json').then(res => res.json()),
-          fetch('collaborators.json').then(res => res.json())
+          fetch('json/projects.json').then(res => res.json()),
+          fetch('json/collaborators.json').then(res => res.json())
         ])
           .then(([projectsRes, collaboratorsRes]) => {
             const sortedProjects = projectsRes.projects.sort((a, b) => {
