--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>اخبار ساده</title>
-  <link href="srvc/ootstrap.rtl.min.css" rel="stylesheet" />
+  <link href="src/bootstrap.rtl.min.css" rel="stylesheet" />
   <style>
     @font-face {
       font-family: 'Vazir';
@@ -21,7 +21,7 @@
       padding: 1rem;
       border-bottom: 1px solid #ddd;
       display: flex;
-      align-items: center;
+      flex-direction: column;
     }
 
     .news-item.important .blinker {
@@ -31,6 +31,19 @@
       border-radius: 50%;
       margin-left: 0.5rem;
       animation: blink 1s infinite;
+      display: inline-block;
+    }
+
+    .news-title {
+      display: flex;
+      align-items: center;
+      font-weight: bold;
+    }
+
+    .news-time {
+      font-size: 0.9rem;
+      color: #666;
+      margin-top: 0.25rem;
     }
 
     @keyframes blink {
@@ -49,17 +62,28 @@
     fetch('json/news.json')
       .then(response => response.json())
       .then(newsList => {
+        // مرتب‌سازی بر اساس تاریخ و زمان نزولی
+        newsList.sort((a, b) => new Date(b.datetime) - new Date(a.datetime));
+
         const container = document.getElementById('news-container');
 
         newsList.forEach(news => {
           const div = document.createElement('div');
           div.className = 'news-item' + (news.important ? ' important' : '');
 
-          if (news.important) {
-            div.innerHTML = `<div class="blinker"></div><div>${news.title}</div>`;
-          } else {
-            div.innerHTML = `<div>${news.title}</div>`;
-          }
+          const dateObj = new Date(news.datetime);
+          const faTime = new Intl.DateTimeFormat('fa-IR-u-ca-persian', {
+            dateStyle: 'medium',
+            timeStyle: 'short'
+          }).format(dateObj);
+
+          div.innerHTML = `
+            <div class="news-title">
+              ${news.important ? '<span class="blinker"></span>' : ''}
+              ${news.title}
+            </div>
+            <div class="news-time">${faTime}</div>
+          `;
 
           container.appendChild(div);
         });
