--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>اخبار ساده</title>
+  <title>اخبار - برای ایران</title>
   <link href="src/bootstrap.rtl.min.css" rel="stylesheet" />
   <style>
     @font-face {
