--- a/ir.html
+++ b/ir.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>منابع ایرانی</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://vazir-fonts.ir/fonts/Vazir.css" rel="stylesheet">
+    <link href="src/bootstrap.min.css" rel="stylesheet">
+    <link href="src/font-face.css" rel="stylesheet">
     <style>
         body {
             font-family: 'Vazir', sans-serif;
@@ -115,7 +115,7 @@
 
     <script>
         // فرض می‌کنیم فایل JSON در مسیر زیر باشد
-        const jsonUrl = 'data.json';
+        const jsonUrl = 'json/data.json';
 
         // بارگذاری داده‌های JSON و نمایش در صفحه
         fetch(jsonUrl)
