--- a/news.html
+++ b/news.html
@@ -8,7 +8,7 @@
   <style>
     @font-face {
       font-family: 'Vazir';
-      src: url('src/Vazir.woff2') format('woff2');
+      src: url('src/Vazir-Bold.woff2') format('woff2');
     }
 
     body {
