--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="ایران اکسس: دسترسی به اطلاعات ضروری در زمان قطعی اینترنت">
+  <meta name="description" content="برای ایران: دسترسی به اطلاعات ضروری در زمان قطعی اینترنت">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="theme-color" content="#1e3a8a">
