--- a/index.html
+++ b/index.html
@@ -21,11 +21,6 @@
       font-family: 'Vazir', sans-serif;
       background: linear-gradient(to bottom, #eff6ff, #dbeafe);
     }
-    .container {
-      @media (max-width: 640px) {
-        padding: 1rem;
-      }
-    }
     .btn {
       transition: all 0.3s ease;
     }
@@ -34,19 +29,27 @@
     }
   </style>
 </head>
-<body class="min-h-screen text-gray-800">
-  <div class="container mx-auto p-6 max-w-3xl">
-    <header class="text-center mb-8">
-      <h1 class="text-4xl font-extrabold text-blue-900 mb-4" id="title"></h1>
-      <p class="text-lg text-gray-700" id="description"></p>
-    </header>
+<body class="min-h-screen text-gray-800 flex flex-col overflow-hidden">
+  <!-- Header -->
+  <header class="fixed top-0 left-0 right-0 bg-blue-900/90 backdrop-blur-sm text-white shadow-md z-10">
+    <div class="container mx-auto px-6 py-4 flex justify-between items-center">
+      <h1 class="text-2xl sm:text-3xl font-extrabold">برای ایران</h1>
+      <nav class="hidden sm:flex space-x-4 space-x-reverse">
+        <a href="#features" class="hover:text-blue-200 transition">ویژگی‌ها</a>
+        <a href="#add-to-home" class="hover:text-blue-200 transition">نصب اپ</a>
+        <a href="#share" class="hover:text-blue-200 transition">اشتراک‌گذاری</a>
+      </nav>
+    </div>
+  </header>
 
-    <section class="bg-white p-8 rounded-xl shadow-lg mb-8">
+  <!-- Main Content -->
+  <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto">
+    <section class="bg-white p-8 rounded-xl shadow-lg mb-8" id="features">
       <h2 class="text-2xl font-bold text-blue-900 mb-4" id="features-title"></h2>
       <ul class="list-disc list-inside space-y-3 text-gray-700" id="features-list"></ul>
     </section>
 
-    <section class="bg-white p-8 rounded-xl shadow-lg mb-8">
+    <section class="bg-white p-8 rounded-xl shadow-lg mb-8" id="add-to-home">
       <h2 class="text-2xl font-bold text-blue-900 mb-4" id="add-to-home-title"></h2>
       <p class="mb-4 text-gray-700" id="add-to-home-desc"></p>
       <ol class="list-decimal list-inside space-y-3 text-gray-700" id="add-to-home-steps"></ol>
@@ -55,13 +58,10 @@
       </button>
     </section>
 
-    <section class="bg-white p-8 rounded-xl shadow-lg mb-8">
+    <section class="bg-white p-8 rounded-xl shadow-lg mb-8" id="share">
       <h2 class="text-2xl font-bold text-blue-900 mb-4" id="share-title"></h2>
       <p class="mb-4 text-gray-700" id="share-desc"></p>
       <div class="flex flex-col sm:flex-row sm:space-x-4 space-y-4 sm:space-y-0">
-        <button id="shareSMS" class="bg-green-600 text-white px-6 py-3 rounded-lg btn hover:bg-green-700">
-          اشتراک‌گذاری از طریق پیامک
-        </button>
         <button id="shareX" class="bg-blue-400 text-white px-6 py-3 rounded-lg btn hover:bg-blue-500">
           اشتراک‌گذاری در شبکه‌های اجتماعی
         </button>
@@ -71,7 +71,14 @@
     <section class="text-center">
       <a href="main.html" class="inline-block bg-blue-600 text-white px-8 py-4 rounded-lg btn hover:bg-blue-700" id="login-button"></a>
     </section>
-  </div>
+  </main>
+
+  <!-- Footer -->
+  <footer class="fixed bottom-0 left-0 right-0 bg-blue-900/90 backdrop-blur-sm text-white shadow-md z-10">
+    <div class="container mx-auto px-6 py-4 text-center">
+      <p class="text-sm">© 2025 برای ایران | پشتیبانی: t.me/m4tinbeigipv</p>
+    </div>
+  </footer>
 
   <script>
     // Load content from JSON
