--- a/Residences.html
+++ b/Residences.html
@@ -83,7 +83,7 @@
   <script>
     async function loadResidences() {
       try {
-        const response = await fetch('residences.json');
+        const response = await fetch('https://f2n.ir/json/residences.json');
         const data = await response.json();
         const residences = data['اقامتگاه‌ها'];
         const tableBody = document.getElementById('tableBody');
