--- a/Residences.html
+++ b/Residences.html
@@ -40,45 +40,64 @@
     }
   </style>
 </head>
-<body class="bg-gray-100 p-4 sm:p-6">
-  <div class="max-w-7xl mx-auto bg-white p-4 sm:p-6 rounded-lg shadow-md">
-    <div class="mb-6 text-center">
-      <h1 class="text-xl sm:text-2xl font-bold">اقامتگاه‌های رایگان یا ارزان</h1>
-      <p class="mt-2">تعداد اقامتگاه‌ها: <span id="residenceCount">0</span></p>
-      <p class="mt-2">کانال اصلی و منبع: <a href="https://t.me/accommodationforwarvictims" target="_blank">@accommodationforwarvictims</a></p>
-      <p>برای معرفی اقامتگاه جدید با خانوم پارمیدا هماهنگ کنید<a href="https://t.me/parm7ida" target="_blank">@parm7ida</a></p>
-      <p class="mt-2 text-red-600 font-semibold text-sm sm:text-base">
-        برای انتقال محتوا از کانال به سایت به ریک سانچز
-        <a href="https://t.me/m4tinbeigipv" target="_blank">@m4tinbeigipv</a> پیام بدید.
-      </p>
+<body class="min-h-screen text-gray-800 flex flex-col overflow-hidden bg-gray-100">
+  <!-- Header -->
+  <header class="fixed top-0 left-0 right-0 bg-blue-900/90 backdrop-blur-sm text-white shadow-md z-10">
+    <div class="container mx-auto px-6 py-4 flex justify-between items-center">
+      <h1 class="text-2xl sm:text-3xl font-extrabold">برای ایران</h1>
+      <nav class="hidden sm:flex space-x-4 space-x-reverse">
+        <a href="index.html#features" class="hover:text-blue-200 transition">ویژگی‌ها</a>
+        <a href="index.html#add-to-home" class="hover:text-blue-200 transition">نصب اپ</a>
+        <a href="index.html#share" class="hover:text-blue-200 transition">اشتراک‌گذاری</a>
+      </nav>
+    </div>
+  </header>
+  <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto" style="margin-top:80px; margin-bottom:80px;">
+    <div class="max-w-7xl mx-auto bg-white p-4 sm:p-6 rounded-lg shadow-md">
+      <div class="mb-6 text-center">
+        <h1 class="text-xl sm:text-2xl font-bold">اقامتگاه‌های رایگان یا ارزان</h1>
+        <p class="mt-2">تعداد اقامتگاه‌ها: <span id="residenceCount">0</span></p>
+        <p class="mt-2">کانال اصلی و منبع: <a href="https://t.me/accommodationforwarvictims" target="_blank">@accommodationforwarvictims</a></p>
+        <p>برای معرفی اقامتگاه جدید با خانوم پارمیدا هماهنگ کنید<a href="https://t.me/parm7ida" target="_blank">@parm7ida</a></p>
+        <p class="mt-2 text-red-600 font-semibold text-sm sm:text-base">
+          برای انتقال محتوا از کانال به سایت به ریک سانچز
+          <a href="https://t.me/m4tinbeigipv" target="_blank">@m4tinbeigipv</a> پیام بدید.
+        </p>
+      </div>
+
+      <input id="searchInput"
+             type="text"
+             placeholder="جستجو بر اساس شهر، منطقه، یا عنوان..."
+             class="w-full p-3 mb-4 border rounded-lg text-right text-sm sm:text-base">
+
+      <div class="table-wrapper">
+        <table id="residencesTable" class="min-w-full text-sm">
+          <thead>
+            <tr>
+              <th>شهر</th>
+              <th>منطقه</th>
+              <th>عنوان</th>
+              <th>شماره تماس</th>
+              <th>قیمت</th>
+              <th>لینک اینستاگرام</th>
+            </tr>
+          </thead>
+          <tbody id="tableBody"></tbody>
+        </table>
+      </div>
     </div>
 
-    <input id="searchInput"
-           type="text"
-           placeholder="جستجو بر اساس شهر، منطقه، یا عنوان..."
-           class="w-full p-3 mb-4 border rounded-lg text-right text-sm sm:text-base">
-
-    <div class="table-wrapper">
-      <table id="residencesTable" class="min-w-full text-sm">
-        <thead>
-          <tr>
-            <th>شهر</th>
-            <th>منطقه</th>
-            <th>عنوان</th>
-            <th>شماره تماس</th>
-            <th>قیمت</th>
-            <th>لینک اینستاگرام</th>
-          </tr>
-        </thead>
-        <tbody id="tableBody"></tbody>
-      </table>
+    <!-- اضافه کردن متن در انتهای صفحه -->
+    <div class="text-center mt-6 text-sm text-gray-600">
+    <a href="https://zenbranding.agency/hamomid">ایده و حامی: پروژه هم امید_آژانس برندسازی ذن</a>
     </div>
-  </div>
-
-  <!-- اضافه کردن متن در انتهای صفحه -->
-  <div class="text-center mt-6 text-sm text-gray-600">
-  <a href="https://zenbranding.agency/hamomid">ایده و حامی: پروژه هم امید_آژانس برندسازی ذن</a>
-  </div>
+  </main>
+  <!-- Footer -->
+  <footer class="fixed bottom-0 left-0 right-0 bg-blue-900/90 backdrop-blur-sm text-white shadow-md z-10">
+    <div class="container mx-auto px-6 py-4 text-center">
+      <p class="text-sm">© 2025 برای ایران | پشتیبانی: t.me/m4tinbeigipv</p>
+    </div>
+  </footer>
 
   <script>
     async function loadResidences() {
