--- a/main.html
+++ b/main.html
@@ -23,119 +23,138 @@
     }
   </style>
 </head>
-<body>
-  <div id="root"></div>
-  <script type="text/babel">
-    const ProjectCard = ({ project, collaborators }) => {
-      const statusText = {
-        completed: "انجام‌شده",
-        in_progress: "در دست اقدام",
-        not_started: "انجام‌نشده"
-      };
-      const statusColor = {
-        completed: "bg-green-500",
-        in_progress: "bg-yellow-500",
-        not_started: "bg-red-500"
-      };
-      const projectCollaborators = collaborators.filter(collab =>
-        project.collaborators.includes(collab.id)
-      );
+<body class="min-h-screen text-gray-800 flex flex-col overflow-hidden bg-gray-100">
+  <!-- Header -->
+  <header class="fixed top-0 left-0 right-0 bg-blue-900/90 backdrop-blur-sm text-white shadow-md z-10">
+    <div class="container mx-auto px-6 py-4 flex justify-between items-center">
+      <h1 class="text-2xl sm:text-3xl font-extrabold">برای ایران</h1>
+      <nav class="hidden sm:flex space-x-4 space-x-reverse">
+        <a href="index.html#features" class="hover:text-blue-200 transition">ویژگی‌ها</a>
+        <a href="index.html#add-to-home" class="hover:text-blue-200 transition">نصب اپ</a>
+        <a href="index.html#share" class="hover:text-blue-200 transition">اشتراک‌گذاری</a>
+      </nav>
+    </div>
+  </header>
+  <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto" style="margin-top:80px; margin-bottom:80px;">
+    <div id="root"></div>
+    <script type="text/babel">
+      const ProjectCard = ({ project, collaborators }) => {
+        const statusText = {
+          completed: "انجام‌شده",
+          in_progress: "در دست اقدام",
+          not_started: "انجام‌نشده"
+        };
+        const statusColor = {
+          completed: "bg-green-500",
+          in_progress: "bg-yellow-500",
+          not_started: "bg-red-500"
+        };
+        const projectCollaborators = collaborators.filter(collab =>
+          project.collaborators.includes(collab.id)
+        );
 
-      return (
-        <div className="bg-gray-800 p-6 rounded-lg mb-6">
-          <a href={project.pageLink} className="text-xl font-bold text-blue-400 hover:underline">
-            {project.title}
-          </a>
-          <p className="mt-2">{project.description}</p>
-          <span className={`inline-block mt-2 px-3 py-1 text-sm rounded-full ${statusColor[project.status]}`}>
-            {statusText[project.status]}
-          </span>
-          <div className="mt-4">
-            <h3 className="text-lg font-semibold">همکاران پروژه:</h3>
-            <div className="flex flex-wrap gap-4 mt-2">
-              {projectCollaborators.map(collab => (
-                <div key={collab.id} className="text-center">
-                  <a href={collab.link} target="_blank" rel="noopener noreferrer">
-                    <img 
-                      src={collab.image || "https://via.placeholder.com/100"} 
-                      alt={collab.name} 
-                      className="member-img mb-2" 
-                    />
-                    <div>{collab.name}</div>
-                  </a>
-                </div>
-              ))}
+        return (
+          <div className="bg-gray-800 p-6 rounded-lg mb-6">
+            <a href={project.pageLink} className="text-xl font-bold text-blue-400 hover:underline">
+              {project.title}
+            </a>
+            <p className="mt-2">{project.description}</p>
+            <span className={`inline-block mt-2 px-3 py-1 text-sm rounded-full ${statusColor[project.status]}`}>
+              {statusText[project.status]}
+            </span>
+            <div className="mt-4">
+              <h3 className="text-lg font-semibold">همکاران پروژه:</h3>
+              <div className="flex flex-wrap gap-4 mt-2">
+                {projectCollaborators.map(collab => (
+                  <div key={collab.id} className="text-center">
+                    <a href={collab.link} target="_blank" rel="noopener noreferrer">
+                      <img 
+                        src={collab.image || "https://via.placeholder.com/100"} 
+                        alt={collab.name} 
+                        className="member-img mb-2" 
+                      />
+                      <div>{collab.name}</div>
+                    </a>
+                  </div>
+                ))}
+              </div>
             </div>
           </div>
-        </div>
-      );
-    };
+        );
+      };
 
-    const App = () => {
-      const [projects, setProjects] = React.useState([]);
-      const [collaborators, setCollaborators] = React.useState([]);
-      const [loading, setLoading] = React.useState(true);
+      const App = () => {
+        const [projects, setProjects] = React.useState([]);
+        const [collaborators, setCollaborators] = React.useState([]);
+        const [loading, setLoading] = React.useState(true);
 
-      React.useEffect(() => {
-        Promise.all([
-          fetch('https://f2n.ir/json/projects.json').then(res => res.json()),
-          fetch('https://f2n.ir/json/collaborators.json').then(res => res.json())
-        ])
-          .then(([projectsRes, collaboratorsRes]) => {
-            const sortedProjects = projectsRes.projects.sort((a, b) => {
-              const statusOrder = { completed: 1, in_progress: 2, not_started: 3 };
-              return statusOrder[a.status] - statusOrder[b.status];
+        React.useEffect(() => {
+          Promise.all([
+            fetch('https://f2n.ir/json/projects.json').then(res => res.json()),
+            fetch('https://f2n.ir/json/collaborators.json').then(res => res.json())
+          ])
+            .then(([projectsRes, collaboratorsRes]) => {
+              const sortedProjects = projectsRes.projects.sort((a, b) => {
+                const statusOrder = { completed: 1, in_progress: 2, not_started: 3 };
+                return statusOrder[a.status] - statusOrder[b.status];
+              });
+              setProjects(sortedProjects);
+              setCollaborators(collaboratorsRes.collaborators);
+              setLoading(false);
+            })
+            .catch(error => {
+              console.error('Error loading JSON files:', error);
+              setLoading(false);
             });
-            setProjects(sortedProjects);
-            setCollaborators(collaboratorsRes.collaborators);
-            setLoading(false);
-          })
-          .catch(error => {
-            console.error('Error loading JSON files:', error);
-            setLoading(false);
-          });
-      }, []);
+        }, []);
 
-      if (loading) {
-        return <div className="text-center py-10">در حال بارگذاری...</div>;
-      }
+        if (loading) {
+          return <div className="text-center py-10">در حال بارگذاری...</div>;
+        }
 
-      return (
-        <div className="container mx-auto py-10 px-4">
-          <h1 className="text-4xl font-bold text-center mb-10">برای ایران - لیست پروژه‌ها</h1>
-          <div className="section">
-            {projects.map(project => (
-              <ProjectCard key={project.id} project={project} collaborators={collaborators} />
-            ))}
-          </div>
-          <div className="section mt-10">
-            <h2 className="text-2xl font-semibold border-b border-gray-500 pb-2 mb-6">همه همکاران</h2>
-            <div className="flex flex-wrap gap-6 justify-center">
-              {collaborators.map(collab => (
-                <div key={collab.id} className="text-center">
-                  <a href={collab.link} target="_blank" rel="noopener noreferrer">
-                    <img 
-                      src={collab.image || "https://via.placeholder.com/100"} 
-                      alt={collab.name} 
-                      className="member-img mb-2" 
-                    />
-                    <div>{collab.name}</div>
-                  </a>
-                </div>
+        return (
+          <div className="container mx-auto py-10 px-4">
+            <h1 className="text-4xl font-bold text-center mb-10">برای ایران - لیست پروژه‌ها</h1>
+            <div className="section">
+              {projects.map(project => (
+                <ProjectCard key={project.id} project={project} collaborators={collaborators} />
               ))}
             </div>
+            <div className="section mt-10">
+              <h2 className="text-2xl font-semibold border-b border-gray-500 pb-2 mb-6">همه همکاران</h2>
+              <div className="flex flex-wrap gap-6 justify-center">
+                {collaborators.map(collab => (
+                  <div key={collab.id} className="text-center">
+                    <a href={collab.link} target="_blank" rel="noopener noreferrer">
+                      <img 
+                        src={collab.image || "https://via.placeholder.com/100"} 
+                        alt={collab.name} 
+                        className="member-img mb-2" 
+                      />
+                      <div>{collab.name}</div>
+                    </a>
+                  </div>
+                ))}
+              </div>
+            </div>
+            <div className="section mt-10 text-center">
+              <h2 className="text-2xl font-semibold border-b border-gray-500 pb-2 mb-6">ارتباط با ما</h2>
+              <p>آیدی تلگرام مسئول: <a href="https://t.me/m4tinbeigipv" className="text-blue-400 hover:underline">@m4tinbeigipv</a></p>
+              <p>گروه تلگرام: <a href="#" className="text-blue-400 hover:underline">لینک گروه برای ایران</a></p>
+              <p>کانال تلگرام: <a href="#" className="text-blue-400 hover:underline">کانال برای ایران</a></p>
+            </div>
           </div>
-          <div className="section mt-10 text-center">
-            <h2 className="text-2xl font-semibold border-b border-gray-500 pb-2 mb-6">ارتباط با ما</h2>
-            <p>آیدی تلگرام مسئول: <a href="https://t.me/m4tinbeigipv" className="text-blue-400 hover:underline">@m4tinbeigipv</a></p>
-            <p>گروه تلگرام: <a href="#" className="text-blue-400 hover:underline">لینک گروه برای ایران</a></p>
-            <p>کانال تلگرام: <a href="#" className="text-blue-400 hover:underline">کانال برای ایران</a></p>
-          </div>
-        </div>
-      );
-    };
+        );
+      };
 
-    ReactDOM.render(<App />, document.getElementById('root'));
-  </script>
+      ReactDOM.render(<App />, document.getElementById('root'));
+    </script>
+  </main>
+  <!-- Footer -->
+  <footer class="fixed bottom-0 left-0 right-0 bg-blue-900/90 backdrop-blur-sm text-white shadow-md z-10">
+    <div class="container mx-auto px-6 py-4 text-center">
+      <p class="text-sm">© 2025 برای ایران | پشتیبانی: t.me/m4tinbeigipv</p>
+    </div>
+  </footer>
 </body>
 </html>
