--- a/index.html
+++ b/index.html
@@ -73,6 +73,14 @@
       </div>
     </section>
 
+    <section class="bg-white p-8 rounded-xl shadow-lg mb-8" id="news-preview">
+      <h2 class="text-2xl font-bold text-blue-900 mb-4">آخرین اخبار</h2>
+      <div id="main-news-list"></div>
+      <div class="text-center mt-4">
+        <a href="news.html" class="inline-block bg-blue-600 text-white px-6 py-2 rounded-lg btn hover:bg-blue-700">مشاهده اخبار بیشتر</a>
+      </div>
+    </section>
+
     <section class="text-center">
       <a href="main.html" class="inline-block bg-blue-600 text-white px-8 py-4 rounded-lg btn hover:bg-blue-700" id="login-button"></a>
     </section>
@@ -166,6 +174,25 @@
         alert('اشتراک‌گذاری در این مرورگر پشتیبانی نمی‌شود. لینک را کپی کنید: ' + shareData.url);
       }
     });
+
+    // نمایش ۳ خبر آخر در صفحه اصلی
+    fetch('json/news.json')
+      .then(response => response.json())
+      .then(newsList => {
+        newsList.sort((a, b) => new Date(b.datetime) - new Date(a.datetime));
+        const mainNews = newsList.slice(0, 3);
+        const newsListDiv = document.getElementById('main-news-list');
+        mainNews.forEach(news => {
+          const div = document.createElement('div');
+          div.className = 'mb-4 p-4 bg-gray-50 rounded shadow';
+          div.innerHTML = `
+            <div class='font-bold text-blue-900 mb-1'>${news.title}</div>
+            <div class='text-xs text-gray-500 mb-1'>${new Intl.DateTimeFormat('fa-IR-u-ca-persian', {dateStyle: 'medium', timeStyle: 'short'}).format(new Date(news.datetime))}</div>
+            <div class='text-gray-700'>${news.text || ''}</div>
+          `;
+          newsListDiv.appendChild(div);
+        });
+      });
   </script>
 </body>
 </html>
