--- a/news.html
+++ b/news.html
@@ -22,6 +22,10 @@
       border-bottom: 1px solid #ddd;
       display: flex;
       flex-direction: column;
+      background: #fff;
+      border-radius: 0.75rem;
+      margin-bottom: 1rem;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.04);
     }
 
     .news-item.important .blinker {
@@ -38,12 +42,16 @@
       display: flex;
       align-items: center;
       font-weight: bold;
+      font-size: 1.1rem;
+      color: #1e3a8a;
     }
 
     .news-time {
       font-size: 0.9rem;
       color: #666;
       margin-top: 0.25rem;
+      direction: ltr;
+      text-align: left;
     }
 
     @keyframes blink {
@@ -145,6 +153,24 @@
     .transition {
       transition: all 0.3s ease;
     }
+
+    @media (max-width: 600px) {
+      .news-item {
+        padding: 0.7rem;
+        font-size: 0.95rem;
+      }
+      .news-title {
+        font-size: 1rem;
+      }
+      .news-time {
+        font-size: 0.85rem;
+      }
+      main {
+        margin-top: 60px !important;
+        margin-bottom: 60px !important;
+        padding: 0.2rem 0;
+      }
+    }
   </style>
 </head>
 <body class="min-h-screen text-gray-800 flex flex-col overflow-hidden bg-gray-100">
@@ -162,6 +188,9 @@
   <main class="container mx-auto px-6 py-20 flex-1 overflow-y-auto" style="margin-top:80px; margin-bottom:80px;">
     <h1 class="text-center my-4">📢 آخرین اخبار</h1>
     <div id="news-container"></div>
+    <div class="text-center mt-8">
+      <a href="index.html" class="inline-block bg-blue-600 text-white px-6 py-2 rounded-lg btn hover:bg-blue-700">بازگشت به صفحه اصلی</a>
+    </div>
   </main>
   <!-- Footer -->
   <footer class="fixed bottom-0 left-0 right-0 bg-blue-900/90 backdrop-blur-sm text-white shadow-md z-10">
@@ -174,29 +203,25 @@
     fetch('json/news.json')
       .then(response => response.json())
       .then(newsList => {
-        // مرتب‌سازی بر اساس تاریخ و زمان نزولی
         newsList.sort((a, b) => new Date(b.datetime) - new Date(a.datetime));
-
         const container = document.getElementById('news-container');
-
         newsList.forEach(news => {
           const div = document.createElement('div');
           div.className = 'news-item' + (news.important ? ' important' : '');
-
           const dateObj = new Date(news.datetime);
           const faTime = new Intl.DateTimeFormat('fa-IR-u-ca-persian', {
             dateStyle: 'medium',
             timeStyle: 'short'
           }).format(dateObj);
-
           div.innerHTML = `
             <div class="news-title">
               ${news.important ? '<span class="blinker"></span>' : ''}
               ${news.title}
             </div>
             <div class="news-time">${faTime}</div>
+            ${news.text ? `<div class='mt-2 text-gray-700'>${news.text}</div>` : ''}
+            ${news.source ? `<div class='mt-2 text-xs text-gray-500'>منبع: ${news.source}</div>` : ''}
           `;
-
           container.appendChild(div);
         });
       })
